Bug 476698 - Neochat Flatpak crashes regularly, when switching channels
Summary: Neochat Flatpak crashes regularly, when switching channels
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.2
Platform: Flatpak Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-08 02:00 UTC by Shawn W Dunn
Modified: 2023-11-24 18:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB Backtrace for latest crash exhibiting behavior (10.38 KB, text/plain)
2023-11-15 00:09 UTC, Shawn W Dunn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shawn W Dunn 2023-11-08 02:00:55 UTC
SUMMARY
***
Frequently, when switching channels in Neochat, I get the "loading bar" and if it doesn't disappear within a second or two, Neochat crashes.   Less Frequently, it crashes on start, when trying to load the initial channel.
***


STEPS TO REPRODUCE
1. Start Neochat via `flatpak run org.kde.neochat`
2. Switch channels

OBSERVED RESULT
Switched channels, and got the "Progress Bar" after a few seconds, Neochat crashes, without error message on screen.

EXPECTED RESULT
Neochat switches from current channel, to desired channel

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.5.9-1-default 
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Logs from `flatpak run -v org.kde.neochat`

[sfalken@mustang ~]$ flatpak run -v org.kde.neochat
F: No installations directory in /etc/flatpak/installations.d. Skipping
F: Opening system flatpak installation at path /var/lib/flatpak
F: Opening user flatpak installation at path /home/sfalken/.local/share/flatpak
F: Opening user flatpak installation at path /home/sfalken/.local/share/flatpak
F: Opening user flatpak installation at path /home/sfalken/.local/share/flatpak
F: /home/sfalken/.local/share/flatpak/runtime/org.kde.Platform/x86_64/5.15-23.08/e8df3ccc33b27e57a15e41a9155e3c8cdbed9b54a6fae8f7d8d8d640bdbf37f8/files/lib32 does not exist
F: Cleaning up unused container id 129235499
F: Cleaning up per-app-ID state for org.kde.neochat
F: Allocated instance id 2459974633
F: Add defaults in dir /org/kde/neochat/
F: Add locks in dir /org/kde/neochat/
F: Allowing dri access
F: Allowing wayland access
F: Allowing pulseaudio access
F: Pulseaudio user configuration file '/home/sfalken/.config/pulse/client.conf': Error opening file /home/sfalken/.config/pulse/client.conf: No such file or directory
F: Running 'bwrap --args 39 /usr/bin/xdg-dbus-proxy --args=41'
F: Running 'bwrap --args 39 neochat'
Reading access token from the keychain for "**REDACTED**"
Reading access token from the keychain for "**REDACTED**"
Reading access token from the keychain for "**REDACTED**"
quotient.main: The library is built with end-to-end encryption (E2EE)
quotient.e2ee: Successfully loaded pickling key from keychain
quotient.e2ee: 65536 bytes of secure heap initialised
quotient.e2ee: Allocated 128 bytes of secure heap (requested 128 bytes), 128 / 65536 bytes of secure heap used in total
quotient.e2ee: The fixed buffer source is shared; assuming that the caller is responsible for securely clearing other copies
quotient.e2ee: Allocated 256 bytes of secure heap (requested 160 bytes), 384 / 65536 bytes of secure heap used in total
quotient.e2ee: Deallocated 256 bytes, 128 / 65536 bytes of secure heap used
quotient.e2ee: Successfully loaded pickling key from keychain
quotient.e2ee: Allocated 128 bytes of secure heap (requested 128 bytes), 352 / 65536 bytes of secure heap used in total
quotient.e2ee: The fixed buffer source is shared; assuming that the caller is responsible for securely clearing other copies
quotient.jobs: 401 <- GET https://fedora.ems.host/_matrix/client/v3/profile/**REDACTED**
quotient.jobs: "GetUserProfileJob" status Unauthorised: Missing access token
quotient.jobs: "GetUserProfileJob" re-running with authentication
quotient.e2ee: Successfully loaded pickling key from keychain
quotient.e2ee: Allocated 128 bytes of secure heap (requested 128 bytes), 512 / 65536 bytes of secure heap used in total
quotient.e2ee: The fixed buffer source is shared; assuming that the caller is responsible for securely clearing other copies
quotient.main: Malformed userId: "@.m.rule.is_user_mention"
quotient.main: Malformed userId: "@.m.rule.is_room_mention"
quotient.main: Malformed userId: "@.m.rule.suppress_edits"
quotient.main: Malformed userId: "@.m.rule.contains_user_name"
Qt Quick Layouts: Detected recursive rearrange. Aborting after two iterations.
Qt Quick Layouts: Detected recursive rearrange. Aborting after two iterations.
QQmlComponent: Cannot create new component instance before completing the previous
qrc:/EmojiDialog.qml:57: TypeError: Cannot read property 'width' of null
qrc:/EmojiPicker.qml:25: TypeError: Cannot read property 'category' of undefined
ASSERT: "isValidFor(room, oldMarker)" in file /run/build/libquotient/Quotient/eventstats.cpp, line 60
Comment 1 Shawn W Dunn 2023-11-15 00:09:41 UTC
Created attachment 163174 [details]
GDB Backtrace for latest crash exhibiting behavior
Comment 2 Bug Janitor Service 2023-11-24 17:51:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1451
Comment 3 Tobias Fella 2023-11-24 18:10:26 UTC
Git commit 6baf2e4888448edbdad0a843ec4a50f96349638e by Tobias Fella.
Committed on 24/11/2023 at 18:50.
Pushed by tfella into branch 'master'.

Fix crash for invalid media uris

M  +2    -2    src/eventhandler.cpp

https://invent.kde.org/network/neochat/-/commit/6baf2e4888448edbdad0a843ec4a50f96349638e
Comment 4 Tobias Fella 2023-11-24 18:10:29 UTC
Git commit 7e8a8615b13c41c9003f1d9ad9f227ba8f2fd207 by Tobias Fella.
Committed on 24/11/2023 at 18:47.
Pushed by tfella into branch 'release/23.08'.

Fix crash for forbidden non-mxc media

M  +2    -2    src/models/messageeventmodel.cpp

https://invent.kde.org/network/neochat/-/commit/7e8a8615b13c41c9003f1d9ad9f227ba8f2fd207