Fix crash for forbidden non-mxc media

BUG: 476698